--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <h2>This is a sample java webapp deployed with jenkins!!!</h2>
     </body>
 </html>
