--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Hello World!</h1>
         <h2>This is a sample java webapp deployed with jenkins!!!</h2>
+        <h3>A new change!</h3>
     </body>
 </html>
